<resources>
    <string name="app_name">Vibe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start">Start</string>
    <string name="cont">Continue</string>
    <string name="pause">Pause</string>
    <string name="noConnection">Connection problems,\nplease try again later</string>
    <string name="reset">Reset</string>

    <string name="close">Close</string>

    <string name="nothing">Nothing</string>
    <string name="nothing_d">Enjoy natural sound</string>

    <string name="delta">Delta 1–4 Hz</string>
    <string name="delta_d">For relaxation and deep sleep</string>
    <string name="tetta">Tetta 4–8 Hz</string>
    <string name="tetta_d">Improving long-term memory,\nfast sleep</string>
    <string name="alpha">Alpha 8–14 Hz</string>
    <string name="alpha_d">Good mood, reduced\nanxiety, positive concentration</string>
    <string name="betta">Betta 14–30 Hz</string>
    <string name="betta_d">High concentration,\nmemory improvement</string>
    <string name="gamma">Gamma 30–100 Hz</string>
    <string name="gamma_d">Enhancing mental abilities and\ncognitive activity</string>

    <string name="description_binua">Binaural beats are an auditory illusion created by the brain. Sounds with different frequencies are fed through the headphones. For example, the right ear hears a sound at 120 Hz, while the left ear hears 140 Hz. To offset the difference, the brain creates an additional tone of 20 Hz. It is believed that it is able to influence our well-being.</string>

    <string name="set_timer">set timer</string>
    <string name="mixer_start">Start</string>


    <string name="birds_and_animals">Birds and animals</string>
    <string name="sounds_of_nature_mixer">Sounds of nature</string>
    <string name="musical_instruments">Musical instruments</string>
    <string name="binaural_beats">Binaural beats</string>
    <string name="duration">Duration</string>

    <string name="sleep">For sleep</string>
    <string name="meditations">Meditations</string>
    <string name="focus">Focus</string>
    <string name="nature">Nature</string>
    <string name="favorite">Favorite</string>
    <string name="mixer">Mixer</string>

    <string name="sleep_l">for sleep</string>
    <string name="meditations_l">meditations</string>
    <string name="focus_l">focus</string>
    <string name="nature_l">nature</string>
    <string name="favorite_l">favorite</string>
    <string name="mixer_l">mixer</string>

    <string name="for_sleep">For sleep</string>
    <string name="for_meditation">For meditation</string>
    <string name="for_focus">For focus</string>
    <string name="sounds_of_nature">Sounds of nature</string>


    <string name="singing_bowls">Singing bowls</string>
    <string name="path_of_zen">Path of zen</string>
    <string name="serenity">Serenity</string>
    <string name="peace_and_tranquility">Peace and tranquility</string>
    <string name="internal_balance">Internal balance</string>
    <string name="in_harmony_with_yourself">In harmony with yourself</string>
    <string name="contemplating_eternity">Contemplating eternity</string>
    <string name="soul_healing">Soul healing</string>
    <string name="om_mantra">Om mantra</string>
    <string name="manipura_mantra">Manipura mantra</string>
    <string name="anahata_mantra">Anahata mantra</string>
    <string name="clear_mind">Clear mind</string>
    <string name="alone_in_infinity">Alone in infinity</string>

    <string name="through_time">Through time</string>
    <string name="space_whisper">Space\nwhisper</string>
    <string name="with_loved_ones">With loved\nones</string>
    <string name="desert_melody">Desert\nMelody</string>
    <string name="towards_the_sunset">Towards the sunset</string>
    <string name="last_rays">Last rays</string>
    <string name="inner_peace">Inner peace</string>
    <string name="northern_lights">Northern\nlights</string>
    <string name="calm">Calm</string>
    <string name="last_ray_of_sunshine">Last ray of\nsunshine</string>
    <string name="cozy_evening">Cozy evening</string>
    <string name="sounds_of_infinity">Sounds of infinity</string>
    <string name="dream_world">Dream world</string>
    <string name="moonlight">Moonlight</string>
    <string name="appeasement">Appeasement</string>

    <string name="the_moment_of_concentration">The Moment Of Concentration</string>
    <string name="strength_of_will">Strength of will</string>
    <string name="energy_and_harmony">Energy and harmony</string>
    <string name="dreams_of_the_future">Dreams of the future</string>
    <string name="way_to_the_goal">Way to the goal</string>
    <string name="new_horizons">New horizons</string>
    <string name="inner_peace2">Inner peace</string>
    <string name="together_with_relatives">Together with relatives</string>
    <string name="seclusion">Seclusion</string>
    <string name="focus_on_the_task">Focus on the task</string>
    <string name="flow_of_thought">Flow of thought</string>
    <string name="imagination_and_creativity">Imagination and creativity</string>

    <string name="sea_and_seagulls">Sea and seagulls</string>
    <string name="bonfire_sounds">Bonfire sounds</string>
    <string name="sounds_of_space">Sounds of space</string>
    <string name="whale_song">Whale song</string>
    <string name="rain_on_the_roof">Rain on the roof</string>
    <string name="river_flowing">River flowing</string>
    <string name="tropical_birds">Tropical birds</string>
    <string name="cat_purring">Cat purring</string>
    <string name="thunder_rolls">Thunder rolls</string>
    <string name="jungle_song">Jungle Song</string>
    <string name="mountain_blizzard">Mountain blizzard</string>
    <string name="dolphin_song">Dolphin Song</string>
    <string name="lake_shore">Lake Shore</string>
    <string name="night_forest">Night forest</string>
    <string name="waterfall_sounds">Waterfall sounds</string>

    <string name="paywall_text1">Try 3 days FREE trial period</string>
    <string name="paywall_text2">Then 3$ per month</string>
    <string name="paywall_text3">Subscribe</string>
    <string name="paywall_text4">You can cancel subscribe without charge during all free trial period</string>
    <string name="paywall_text5">No access without subscribe</string>



    <string name="weekly_sub_head">Weekly</string>
    <string name="monthly_sub_head">Monthly</string>
    <string name="yearly_sub_head">Yearly</string>


    <string name="ready_to_go_pro">Ready to go Pro?</string>
    <string name="ready_to_go_pro_sub">No commitment, cancel anytime</string>

    <string name="sub_description">3 days free, then %1$s </string>

    <string name="weekly_sub">week</string>
    <string name="monthly_sub">month</string>
    <string name="annual_sub">year</string>
    <string name="disable_ad_button">Disable Ads</string>
    <string name="disable_ad_description_1">Disable ads and enjoy all the features of the app without any limitations!</string>
    <string name="disable_ad_description_2">You can cancel the subscription at any time.</string>
    <string name="paywall_first_header">Meditate</string>
    <string name="paywall_first_description">Instead of seeking tranquility in the outside world, find it within yourself. Begin your journey into the world of meditation.</string>
    <string name="paywall_abstraction_header">Abstract</string>
    <string name="paywall_abstraction_description">Learn to detach from the daily hustle. Dive into your thoughts and find inner peace.</string>
    <string name="paywall_relax_header">Relax</string>
    <string name="paywall_relax_description">Leave all the stresses and worries behind. It’s time to learn true relaxation and harmony.</string>
    <string name="paywall_concentration">Focus</string>
    <string name="paywall_concentration_description">Often distracted? Learn to manage your attention and become more efficient in your daily tasks.</string>
    <string name="paywall_second_header">Create</string>
    <string name="paywall_second_description">Create a unique sound space that helps you relax or focus.</string>


</resources>