<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF03061A"
    app:layout_constraintDimensionRatio="w,100:40"
    tools:context=".MixerPlayerServiceFragment">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="left"
        android:text="@string/mixer"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <VideoView
            android:id="@+id/video_player"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#FF03061A"
            app:layout_constraintBottom_toTopOf="@+id/timerText"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/blue_gradient_for_button"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/closeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/playButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_gradient_for_button"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="#FBFBFB"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="65dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0E1233"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="#FBFBFB"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/inter_regular"
            android:text="00 : 14 : 58"
            android:textColor="#FBFBFB"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/playButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView73"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blue_gradient4" />

    <ImageView
        android:id="@+id/imageView74"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="180"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_gradient4" />

</androidx.constraintlayout.widget.ConstraintLayout>